2003-11-09  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in (DOCUMENTATION): Set value to MAINTAINER_MODE.
	(TIDY): Likewise.
	(TIDYFLAGS): Likewise.
	* configure.in: Do not search for Jade, tidy, DocBook stylesheets,
	etc.
	* configure: Regenerated.

2003-10-15  Mark Mitchell  <mark@codesourcery.com>

	* qm/fields.py (SetField.ParseFormValue): Correct logic
	determining whether or not to redisplay the form.

2003-10-14  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in: Sipmlify drastically, relying on distutils to do
	all of the work.
	* setup.py: Tidy.  Add support for DTML files and other missing
	GUI functionality.
	* qm/__init__.py: Pull in data_dir from the configuration file.
	* qm/common.py (get_share_directory): Use it.
	(get_doc_directory): Likewise.
	* qm/qm.sh: Remove.
	* qm/test/.cvsignore: Remove qmtest and qmtest.bat.
	* qm/test/base.py (get_extension_directories): Use
	get_share_directory to find test classes.
	* qm/test/cmdline.py (QMTest.__init__): Add 'path' argument.
	* qm/test/qmtest.py: Rename to ...
	* qm/test/qmtest: ... this.  Add logic to allow QMTest to find its
	own modules.
	* qm/test/doc/reference.xml: Remove QM_PYTHON.
	* qmdist/command/__init__.py (get_relative_path): New function.
	* qmdist/command/check.py: Revise to reference "qmtest", not
	"qmtest.py".
	* qmdist/command/install_data.py (install_data.run): Output
	data_dir as a relative path.
	* qmdist/command/install_scripts.py: New file.
	* NEWS: Update.
		
2003-10-02  Stefan Seefeld  <seefeld@sympatico.ca>

	* qm/test/share/dtds/result.dtd: Convert 'outcome' to an attribute.
	* qm/test/result.py: Likewise.
	* qm/test/classes/xml_result_stream.py: Likewise.
	* tests/results_files/README: Report new xml result file format.
	* tests/results_files/xml_results_v3.qmr: New reference results file.

2003-10-02  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/base.py (get_extension_directories): Use ";" as the
	QMTEST_CLASS_PATH separator on Windows.